--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.1",
@@ -23,6 +24,7 @@
   "description": "Pokedex App",
   "main": "index.js",
   "scripts": {
+    "start": "http-server -c-1",
     "test": "jest",
     "prepare": "husky install"
   },
