--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -17,7 +18,8 @@
     "husky": "^8.0.3",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.1",
-    "prettier": "2.8.3"
+    "prettier": "2.8.3",
+    "typescript": "^5.1.3"
   },
   "name": "pokedex-app-clase-13",
   "version": "1.0.0",
@@ -25,7 +27,7 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -c-1",
-    "test": "jest",
+    "test": "jest src/",
     "prepare": "husky install"
   },
   "repository": {
