--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,23 @@
 {
-    "compilerOptions": {
-      "lib": [
-        "es2021"
-      ],
-      "target": "es2021",
-      "strict": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
-      "allowUnusedLabels": false,
-      "allowUnreachableCode": false,
-      "exactOptionalPropertyTypes": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitOverride": true,
-      "noImplicitReturns": true,
-      "noPropertyAccessFromIndexSignature": true,
-      "noUncheckedIndexedAccess": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "checkJs": true,
-      "allowJs": true,
-      "outDir": "dist"
-    },
-    "include": [
-      "./src/**/*",
-      "./__tests__/**/*"
-    ]
-  }
+  "compilerOptions": {
+    "module": "es2015",
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "sourceMap": false,
+    "outDir": "./dist",
+    "target": "es5",
+    "moduleResolution": "node",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "types": ["@types/jest", "jest", "cypress", "jsdom"],
+    "allowJs": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
+}
