Modified tsconfig compiler options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": false,
-    "outDir": "./dist",
+    "outDir": "dist",
+    "rootDir": "./",
     "target": "es5",
     "moduleResolution": "node",
     "strict": true,
